# all_in_agent

./: .gitignore
week1/day1/: demo01.py  demo02.py  demo03.py  demo04.py  demo05.py  demo06.py  demo07.py  demo08.py  demo09.py  demo10.py  demo11.py  demo12.py  demo13.py  demo14.py  requirements.txt
week1/day3/: requirements.txt
week1/day3/rag/: .env  .gitattributes  Advanced目录代码详解.md  High07查询转换技术详解.md  High08重排序技术深度解析.md  High08重排序技术详解.md  RAG系统详细文档.md  base内容总结.md  requirements.txt  test_setup.py
week1/day3/rag/Semantic-chunking/: chunking_boundaries.py  semantic_chunking_complete.py  (+2 more)
week1/day4/: Faiss_demo.py
week1/day4/sbert/: quickstart.py
week1/day5/: README.md  rag_from_scratch_10_and_11_commented.ipynb  rag_from_scratch_12_to_14_commented.ipynb  rag_from_scratch_1_to_4_commented.ipynb  rag_from_scratch_5_to_9_commented.ipynb
week1/day6/Chat_with_Datawhale_langchain-main/: README.md  requirements.txt
week1/day6/Tianji-main/: README_en.md
week1/day7/: .gitignore  test_auto_load.py  test_similarity_search.py
week1/day7/DocChat/: README.md  pyproject.toml
week1/day7/DocChat/app/: main.py
week1/day7/DocChat/app/database/: call_embedding.py  create_db.py
week1/day7/DocChat/app/embedding_db/: chroma.sqlite3
week1/day7/DocChat/app/models/: chat_chain.py
week1/day7/DocChat/app/prompt_template/: prompt_template.py
week1/day7/DocChat/app/router/: routes.py
week1/day7/DocChat/app/schemas/: schemas.py
week1/day7/DocChat/app/utils/: chunk_text.py  create_embeddings.py  extract_text_from_pdf.py  get_vectordb.py  semantic_search.py
(+68 files in other folders)
